--- a/index.html
+++ b/index.html
@@ -30,9 +30,30 @@
            }(document, 'script', 'facebook-jssdk'));
         </script>
         <div id="wrapper">
-            <div class="box"></div>
+            <div class="logo"></div>
+            <div class="info">
+                <span>i</span>
+            </div>
             <section id="mapCanvas"></section>
         </div>
+
+        <div id="aboutWrapper">
+            <div id="aboutFrame">
+                <h3>ABOUT THE PROJECT</h3>
+                <div id="close">
+                    <a class="btnClose">
+                        <span class="line"></span>
+                        <span class="line"></span>
+                    </a>
+                </div>
+                <div class="aboutContents" ng-app ng-controller="ProjectsCtrl">
+                    <ul>
+                        <li ng-repeat="project in projects" ng-bind-html-unsafe="getContent(project)"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         <section id="sns">
             <div id="fb-root"></div>
             <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fsekkithub.com%2Fdev%2Framen%2F&amp;width=90&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=21&amp;appId=725243410880938" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true">
@@ -41,6 +62,7 @@
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
             </script>
         </section>
+
         <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
         <script type="text/javascript" src="js/mapApi.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
