add about bubble, font-family & background image

--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
                         <span class="line"></span>
                     </a>
                 </div>
-                <div class="aboutContents" ng-app ng-controller="ProjectsCtrl">
+                <div class="aboutContents">
                     <ul>
-                        <li ng-repeat="project in projects" ng-bind-html-unsafe="getContent(project)"></li>
+                        <li class="bubbleYuriy">In fall 2013 my friend Masato introduced me to the beautiful world of Japanese ramen. I instantly became obsessed.</li>
+                        <li class="bubbleMasato">London’s ramen scene is not that big, but there are some nice places. So Yuriy designed and I coded the Ramen Map of London to help fellow ramen-lovers to find a decent bowl.</li>
+                        <li class="bubbleYuriy">This is still very much an MVP, but we have big plans.</li>
+                        <li class="bubbleMasato">Yeah, stay in touch. Follow us on Twitter and Facebook, or sign up for email newsletter (no bullshit, we pinky swear).</li>
                     </ul>
                 </div>
             </div>
