--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </script>
         <div id="wrapper">
             <div class="logo">
-                <img src="images/logo.gif">
+                <a href=""><img src="images/logo.gif"></a>
             </div>
             <div class="info">
                 <span>i</span>
