implement sprite logo and add animation

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
            }(document, 'script', 'facebook-jssdk'));
         </script>
         <div id="wrapper">
-            <div class="logo">
-                <a href=""><img src="images/logo.gif"></a>
-            </div>
+            <div class="logo"></div>
             <div class="info">
                 <span>i</span>
             </div>
