--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                 </div>
                 <div class="aboutContents">
                     <ul>
-                        <li class="bubbleYuriy">
+                        <li class="bubbleYuriy bubbleChat">
                             In fall 2013 my friend Masato introduced me to the beautiful world of Japanese ramen. I instantly became obsessed.
                         </li>
-                        <li class="bubbleMasato">
+                        <li class="bubbleMasato bubbleChat">
                             London’s ramen scene is not that big, but there are some nice places. 
                             So Yuriy designed and I coded the Ramen Map of London to help fellow ramen-lovers to find a decent bowl.
                         </li>
-                        <li class="bubbleYuriy">This is still very much an MVP, but we have big plans.</li>
-                        <li class="bubbleMasato">
+                        <li class="bubbleYuriy bubbleChat">This is still very much an MVP, but we have big plans.</li>
+                        <li class="bubbleMasato bubbleChat">
                             Yeah, stay in touch. Follow us on <a href="" target="_blank">Twitter</a> and 
                             <a href="" target="_blank">Facebook</a>, or sign up for <a href="">email newsletter</a> 
                             (no bullshit, we pinky swear).
