--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </section>
 
         <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src="js/location.js"></script>
         <script type="text/javascript" src="js/mapApi.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         
