add shop info on mapApi.js and shops.js

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         </li>
                         <li class="bubbleYuriy bubbleChat">This is still very much an MVP, but we have big plans.</li>
                         <li class="bubbleMasato bubbleChat">
-                            Yeah, stay in touch. Follow us on <a href="" target="_blank">Twitter</a> and 
-                            <a href="" target="_blank">Facebook</a>, or sign up for <a href="">email newsletter</a> 
+                            Yeah, stay in touch. Follow us on <a href="https://twitter.com/RamenMapLDN" target="_blank">Twitter</a> and 
+                            <a href="https://www.facebook.com/ramenmapoflondon" target="_blank">Facebook</a>, or sign up for <a href="">email newsletter</a> 
                             (no bullshit, we pinky swear).
                         </li>
                     </ul>
@@ -76,7 +76,7 @@
         </section>
 
         <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-        <script type="text/javascript" src="js/location.js"></script>
+        <script type="text/javascript" src="js/shops.js"></script>
         <script type="text/javascript" src="js/mapApi.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         
