separate shop logos in images folder & add wrapper for infowindow

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/style.css" />
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8aGjPPvmfOWtApq3oY3JeSxLphoC-uag&sensor=TRUE"></script>
+        <script type="text/javascript" src="js/infobox.js"></script>
         <!--[if lt IE 8]>
             <link href="stylesheets/ie.css" rel="stylesheet" />
         <![endif]-->
