implement info animation WIP

--- a/index.html
+++ b/index.html
@@ -32,12 +32,16 @@
         </script>
         <div id="wrapper">
             <div class="logo"></div>
-            <div class="info">
-                <div class="infoIcon">
-                    <span class="infoDot"></span>
-                    <span class="infoLine"></span>
+
+            <div id="hamburger" class="hamburglar is-open">
+                <div class="burger-icon">
+                  <div class="burger-container">
+                    <span class="burger-bun-top"></span>
+                    <span class="burger-bun-bot"></span>
+                  </div>
                 </div>
             </div>
+
             <section id="mapCanvas"></section>
         </div>`
                 <div id="close">
