complete info click animation

--- a/index.html
+++ b/index.html
@@ -43,30 +43,24 @@
             </div>
 
             <section id="mapCanvas"></section>
-        </div>`
-                <div id="close">
-                    <a class="btnClose">
-                        <span class="line"></span>
-                        <span class="line"></span>
-                    </a>
-                </div>
-                <div class="aboutContents">
-                    <ul>
-                        <li class="bubbleYuriy bubbleChat">
-                            In fall 2013 my friend Masato introduced me to the beautiful world of Japanese ramen. I instantly became obsessed.
-                        </li>
-                        <li class="bubbleMasato bubbleChat">
-                            London’s ramen scene is not that big, but there are some nice places. 
-                            So Yuriy designed and I coded the Ramen Map of London to help fellow ramen-lovers to find a decent bowl.
-                        </li>
-                        <li class="bubbleYuriy bubbleChat">This is still very much an MVP, but we have big plans.</li>
-                        <li class="bubbleMasato bubbleChat">
-                            Yeah, stay in touch. Follow us on <a href="https://twitter.com/RamenMapLDN" target="_blank">Twitter</a> and 
-                            <a href="https://www.facebook.com/ramenmapoflondon" target="_blank">Facebook</a>, or sign up for <a href="">email newsletter</a> 
-                            (no bullshit, we pinky swear).
-                        </li>
-                    </ul>
-                </div>
+        </div>
+        <div id="aboutWrapper">
+              <div class="aboutContents">
+                <ul>
+                    <li class="bubbleYuriy bubbleChat">
+                        In fall 2013 my friend Masato introduced me to the beautiful world of Japanese ramen. I instantly became obsessed.
+                    </li>
+                    <li class="bubbleMasato bubbleChat">
+                        London’s ramen scene is not that big, but there are some nice places. 
+                        So Yuriy designed and I coded the Ramen Map of London to help fellow ramen-lovers to find a decent bowl.
+                    </li>
+                    <li class="bubbleYuriy bubbleChat">This is still very much an MVP, but we have big plans.</li>
+                    <li class="bubbleMasato bubbleChat">
+                        Yeah, stay in touch. Follow us on <a href="https://twitter.com/RamenMapLDN" target="_blank">Twitter</a> and 
+                        <a href="https://www.facebook.com/ramenmapoflondon" target="_blank">Facebook</a>, or sign up for <a href="">email newsletter</a> 
+                        (no bullshit, we pinky swear).
+                    </li>
+                </ul>
             </div>
         </div>
 
