--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="user-scalable=0, initial-scale=1.0">
+        <meta name="description" content="London Ramen Map is a curated directory of best ramen places in London">
+        <meta name="keywords" content="ramen,noodles,japanese,udon,london,cuisine,food">
         <title>Ramen map of London</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/style.css" />
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8aGjPPvmfOWtApq3oY3JeSxLphoC-uag&sensor=TRUE"></script>
+        <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyB8aGjPPvmfOWtApq3oY3JeSxLphoC-uag&sensor=TRUE"></script>
         <script type="text/javascript" src="js/infobox.js"></script>
         <!--[if lt IE 8]>
             <link href="stylesheets/ie.css" rel="stylesheet" />
         <![endif]-->
     </head>
     <body>
+        <!-- Facebook like button-->
         <script>
           window.fbAsyncInit = function() {
             FB.init({
@@ -30,9 +33,11 @@
              fjs.parentNode.insertBefore(js, fjs);
            }(document, 'script', 'facebook-jssdk'));
         </script>
+
         <div id="wrapper">
             <div class="logo"></div>
 
+            <!-- Info Icon-->
             <div id="hamburger" class="hamburglar is-open">
                 <div class="burger-icon">
                   <div class="burger-container">
@@ -44,6 +49,7 @@
 
             <section id="mapCanvas"></section>
         </div>
+
         <div id="aboutWrapper">
               <div class="aboutContents">
                 <ul>
