implement links of [open in GMaps]

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
         <div id="aboutWrapper">
               <div class="aboutContents">
+                <h2>ABOUT THE PROJECT</h2>
                 <ul>
                     <li class="bubbleYuriy bubbleChat">
                         In fall 2013 my friend Masato introduced me to the beautiful world of Japanese ramen. I instantly became obsessed.
