--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <![endif]-->
     </head>
     <body>
+      <div id="loading">
+        <img src="images/loading.gif" >
+      </div>
+
         <!-- Facebook like button-->
         <script>
           window.fbAsyncInit = function() {
