work in progress selected marker

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <!--[if lt IE 8]>
             <link href="stylesheets/ie.css" rel="stylesheet" />
         <![endif]-->
+        <script src="//use.typekit.net/llc8ydg.js"></script>
+        <script>try{Typekit.load();}catch(e){}</script>
     </head>
     <body>
       <div id="loading">
@@ -39,7 +41,9 @@
         </script>
 
         <div id="wrapper">
-            <div class="logo"></div>
+            <a href="/">
+              <div class="logo"></div>
+            </a>
 
             <!-- Info Icon-->
             <div id="hamburger" class="hamburglar is-open">
