modify about page text

--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
                     </li>
                     <li class="bubbleYuriy bubbleChat">This is still very much an MVP, but we have big plans.</li>
                     <li class="bubbleMasato bubbleChat">
-                        Yeah, stay in touch. Follow us on <a href="https://twitter.com/RamenMapLDN" target="_blank">Twitter</a> and 
-                        <a href="https://www.facebook.com/ramenmapoflondon" target="_blank">Facebook</a>, or sign up for <a href="">email newsletter</a> 
-                        (no bullshit, we pinky swear).
+                        Follow us on <a href="https://twitter.com/RamenMapLDN" target="_blank">Twitter</a> or <a href="https://www.facebook.com/ramenmapoflondon" target="_blank">Facebook</a>. And please do <a href="mailto:yum@londonramenmap.uk">drop us a line</a> if you you know something that we don't.
                     </li>
                 </ul>
             </div>
