--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <script>try{Typekit.load();}catch(e){}</script>
     </head>
     <body>
-      <div id="loading">
-        <img src="images/loading.gif" >
-      </div>
+        <div id="loading">
+          <img src="images/loading.gif" >
+        </div>
 
         <!-- Facebook like button-->
         <script>
@@ -86,7 +86,7 @@
             </script>
         </section>
 
-        <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-latest.min.js"></script>
         <script type="text/javascript" src="js/shops.js"></script>
         <script type="text/javascript" src="js/mapApi.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
