--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="user-scalable=0, initial-scale=1.0">
     <meta name="description" content="London Ramen Map is a curated directory of best ramen places in London">
     <meta name="keywords" content="ramen,noodles,japanese,udon,london,cuisine,food">
+    <meta property="og:site_name" content="London Ramen Map">
+    <meta property="og:url" content="http://londonramenmap.uk">
+    <meta property="og:image" content="http://londonramenmap.uk/images/fb_share_img.png">
+    <meta property="og:description" content="London Ramen Map is a curated directory of best ramen places in London.">
     <title>London Ramen Map</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -68,7 +72,7 @@
             London’s ramen scene is not that big, but there are some nice places. 
             So Yuriy designed and I coded the Ramen Map of London to help fellow ramen-lovers to find a decent bowl.
           </li>
-          <li class="bubbleYuriy bubbleChat">This is still very much an MVP, but we have big plans.</li>
+          <li class="bubbleYuriy bubbleChat">This is version 0.1, but we have big plans.</li>
           <li class="bubbleMasato bubbleChat">
             Follow us on <a href="https://twitter.com/londonramenmap" target="_blank">Twitter</a> or <a href="https://www.facebook.com/londonramenmap" target="_blank">Facebook</a>. And please do <a href="mailto:yum@londonramenmap.uk">drop us a line</a> if you you know something that we don't.
           </li>
