--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="user-scalable=0, initial-scale=1.0">
     <meta name="description" content="London Ramen Map is a curated directory of best ramen places in London">
     <meta name="keywords" content="ramen,noodles,japanese,udon,london,cuisine,food">
