--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>London Ramen Map</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyB8aGjPPvmfOWtApq3oY3JeSxLphoC-uag&sensor=TRUE"></script>
     <script type="text/javascript" src="js/infobox.js"></script>
     <!--[if lt IE 8]>
